--- a/index.html
+++ b/index.html
@@ -70,87 +70,18 @@
         <!-- カードグリッド -->
         <div class="card-grid" id="cardGrid">
             <!-- カードデータ -->
-            <article class="card" data-date="2025-04-21" data-tags="数学Ⅰ,乗法公式">
+            <article class="card" data-date="2025-05-16" data-tags="数学Ⅱ,解と係数の関係">
                  <div class="card-content">
-                    <h3 class="card-title"><a href="20250421.html">[数学] 乗法公式</a></h3>
-                    <p class="card-date">2025年4月21日</p>
-                    <p class="card-summary">中学校の乗法公式から高校の乗法公式まで</p>
+                    <h3 class="card-title"><a href="20250516.html">[数学] 解と係数の関係</a></h3>
+                    <p class="card-date">2025年5月16日</p>
+                    <p class="card-summary">二次方程式の解と係数の関係</p>
                 </div>
                 <div class="card-tags">
-                    <span class="tag" data-tag="数学Ⅰ">#数学Ⅰ</span>
-                    <span class="tag" data-tag="乗法公式">#乗法公式</span>
+                    <span class="tag" data-tag="数学Ⅰ">#数学Ⅱ</span>
+                    <span class="tag" data-tag="乗法公式">#解と係数の関係</span>
                 </div>
-            </article>
-            <article class="card" data-date="2025-04-23" data-tags="数学Ⅰ,因数分解,展開">
-                <div class="card-content">
-                    <h3 class="card-title"><a href="20250423.html">[数学] 工夫した展開と因数分解</a></h3>
-                    <p class="card-date">2025年4月23日</p>
-                    <p class="card-summary">工夫した展開と因数分解について</p>
-                </div>
-                <div class="card-tags">
-                    <span class="tag" data-tag="数学Ⅰ">#数学Ⅰ</span>
-                    <span class="tag" data-tag="因数分解">#因数分解</span>
-                    <span class="tag" data-tag="展開">#展開</span>
-                </div>
-            </article>
-             <article class="card" data-date="2025-04-24" data-tags="数学Ⅰ,因数分解,展開">
-                 <div class="card-content">
-                    <h3 class="card-title"><a href="20250424.html">[数学] 公式を使った因数分解</a></h3>
-                    <p class="card-date">2025年4月24日</p>
-                    <p class="card-summary">公式を因数分解について</p>
-                </div>
-                <div class="card-tags">
-                    <span class="tag" data-tag="数学Ⅰ">#数学Ⅰ</span>
-                    <span class="tag" data-tag="因数分解">#因数分解</span>
-                    <span class="tag" data-tag="展開">#展開</span>
-                </div>
-            </article>
-             <article class="card" data-date="2025-04-25" data-tags="数学Ⅰ,因数分解,展開">
-                 <div class="card-content">
-                    <h3 class="card-title"><a href="20250425.html">[数学] 工夫が必要な因数分解</a></h3>
-                    <p class="card-date">2025年4月25日</p>
-                    <p class="card-summary">因数分解を工夫して解く方法とそのセオリー</p>
-                </div>
-                <div class="card-tags">
-                    <span class="tag" data-tag="数学Ⅰ">#数学Ⅰ</span>
-                    <span class="tag" data-tag="因数分解">#因数分解</span>
-                    <span class="tag" data-tag="展開">#展開</span>
-                </div>
-            </article>
-          <article class="card" data-date="2025-04-28" data-tags="数学Ⅰ,因数分解">
-                 <div class="card-content">
-                    <h3 class="card-title"><a href="20250428.html">[数学] 因数分解（応用）</a></h3>
-                    <p class="card-date">2025年4月28日</p>
-                    <p class="card-summary">高校レベルの因数分解（応用）</p>
-                </div>
-                <div class="card-tags">
-                    <span class="tag" data-tag="数学Ⅰ">#数学Ⅰ</span>
-                    <span class="tag" data-tag="因数分解">#因数分解</span>
-                </div>
-               </article>
-             <article class="card" data-date="2025-05-07" data-tags="数学Ⅰ,因数分解,展開">
-                 <div class="card-content">
-                    <h3 class="card-title"><a href="20250507.html">[数学] 実数と循環小数の分数化</a></h3>
-                    <p class="card-date">2025年5月7日</p>
-                    <p class="card-summary">循環小数に関するあれこれ</p>
-                </div>
-                <div class="card-tags">
-                    <span class="tag" data-tag="数学Ⅰ">#数学Ⅰ</span>
-                    <span class="tag" data-tag="因数分解">#循環小数</span>
-                    <span class="tag" data-tag="展開">#既約分数</span>
-                </div>
-                 </article>
-            <article class="card" data-date="2025-04-23" data-tags="数学Ⅰ,因数分解,展開">
-                <div class="card-content">
-                    <h3 class="card-title"><a href="20250508.html">[数学] 座標と絶対値</a></h3>
-                    <p class="card-date">2025年5月8日</p>
-                    <p class="card-summary">座標と絶対値</p>
-                </div>
-                <div class="card-tags">
-                    <span class="tag" data-tag="数学Ⅰ">#数学Ⅰ</span>
-                    <span class="tag" data-tag="因数分解">#座標</span>
-                    <span class="tag" data-tag="展開">#絶対値</span>
-                </div>
+         
+            
             </article>
         </div>
     </main>
