--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
                     <span class="tag" data-tag="剰余の定理">#剰余の定理</span>
                 </div>
            </article>
+ <article class="card" data-date="2025-05-29" data-tags="数学Ⅱ,因数定理を利用した因数分解">
+                 <div class="card-content">
+                    <h3 class="card-title"><a href="20250529.html">[数学] 因数定理を利用した因数分解</a></h3>
+                    <p class="card-date">2025年5月29日</p>
+                    <p class="card-summary">因数定理を利用した因数分解</p>
+                </div>
+                <div class="card-tags">
+                    <span class="tag" data-tag="数学Ⅱ">#数学Ⅱ</span>
+                    <span class="tag" data-tag="剰余の定理">#因数定理を利用した因数分解</span>
+                </div>
+           </article>
+
+
+            
         </div>
     </main>
 
