--- a/index.html
+++ b/index.html
@@ -145,6 +145,18 @@
                 </div>
            </article>
 
+            <article class="card" data-date="2025-06-06" data-tags="数学Ⅱ,等式の証明2">
+                 <div class="card-content">
+                    <h3 class="card-title"><a href="20250606.html">[数学] 等式の証明2</a></h3>
+                    <p class="card-date">2025年6月6日</p>
+                    <p class="card-summary">等式の証明2</p>
+                </div>
+                <div class="card-tags">
+                    <span class="tag" data-tag="数学Ⅱ">#数学Ⅱ</span>
+                    <span class="tag" data-tag="剰余の定理">#等式の証明2</span>
+                </div>
+           </article>
+
 
             
         </div>
