--- a/index.html
+++ b/index.html
@@ -158,6 +158,19 @@
            </article>
 
 
+<article class="card" data-date="2025-06-19" data-tags="数学Ⅱ,不等式の証明">
+                 <div class="card-content">
+                    <h3 class="card-title"><a href="20250619.html">[数学] 不等式の証明</a></h3>
+                    <p class="card-date">2025年6月19日</p>
+                    <p class="card-summary">不等式の証明</p>
+                </div>
+                <div class="card-tags">
+                    <span class="tag" data-tag="数学Ⅱ">#数学Ⅱ</span>
+                    <span class="tag" data-tag="剰余の定理">#不等式の証明</span>
+                </div>
+           </article>
+
+            
             
         </div>
     </main>
